<resources>
    <string name="app_name">Foodey App</string>
    <string name="skip">Skip</string>
    <string name="select_res">Select your Restaurant</string>
    <string name="select_res_sam">Select your restaurant and order food from their menu.</string>
    <string name="select_food">Select your Food</string>
    <string name="select_food_sam">There are lot of menus in our app. Just select your item and order that from your home.</string>
    <string name="order_food">Order your Food</string>
    <string name="order_res_sam">Place your order and get it delivered at you door step.</string>
    <string name="get_started_now">Get started Now</string>
    <string name="we_give_you">Food, Grocery, Cakes whatever is your choice we deliver it!!!. Just try ordering with our app, Let\'s get started.</string>
    <string name="new_user">New User?</string>
    <string name="login">Login</string>
    <string name="guest_user">Guest User</string>
    <string name="select_store">Select your Store</string>
    <string name="select_res_store">Select your desired store and order grocery from their store</string>
    <string name="select_grocery">Select your Grocery</string>
    <string name="select_grocery_sam">There are many stores in our app. Just select your grocery items and order that from your home.</string>
    <string name="order_grocery">Order your Grocery Items</string>
    <string name="deliver_grocery">Get your order delivered at your door step</string>
    <string name="select_cake">Select your Shop</string>
    <string name="select_res_cake">Select your desired shop and order cake</string>
    <string name="select_cake_item">Select your Cake Type</string>
    <string name="select_cake_sam">There are many shops in our app. Just select your cake type and order that from your home.</string>
    <string name="order_cake">Order your Cake</string>
    <string name="deliver_cake">Get your order delivered at your door step</string>
    <string name="goody_foody">Foodey</string>
    <string name="instant_food_delivery">Food . Grocery . Cake</string>
    <string name="phone_num">Mobile Number</string>
    <string name="name_email">Name or E-mail</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="signup_now">Signup now</string>
    <string name="signup">Signup</string>
    <string name="signin_fb">Signin with Facebook</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="otp_auto">OTP Auto fetch</string>
    <string name="otp">OTP</string>
    <string name="enter_registered">Enter your registered mobile number</string>
    <string name="otp_sent">One Time Password(OTP) has been sent to your mobile number. Please enter it here to verify.</string>
    <string name="verify_now">Verify Now</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_mobile">Verify Mobile Number</string>
    <string name="your_mobile">Your Mobile Number</string>
    <string name="verify_">Verify</string>
    <string name="verification_code">Verification code</string>
    <string name="verified">Verified</string>
    <string name="reset_pass">Reset Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirmation Password</string>
    <string name="update">Update</string>
    <string name="new_user_sign">New User? Signup</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="Password">Password</string>
    <string name="tell_us">Tell us your location</string>
    <string name="this_help_us">this help us to recommend the best restaurants and offers around you.</string>
    <string name="auto_detect">Auto detect my location</string>
    <string name="no_i_will">No,I will type my location every time</string>
    <string name="home">Home</string>
    <string name="booking">Bookings</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="eat_out">Eat Out</string>
    <string name="order_food_">Order Food</string>
    <string name="order_now">Order Now</string>
    <string name="frequently_searched">Frequently Searched</string>
    <string name="offer_near">Offer Near You</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="restaurants">Popular Restaurants</string>
    <string name="breakfast">Breakfast</string>
    <string name="snacks">Snacks and Ice-Creams</string>
    <string name="great_food">Great Food, No Bull</string>
    <string name="see_all">View All</string>
    <string name="eat_out_res">Eat Out Restaurants</string>
    <string name="delivery_res">Delivery Restaurants</string>
    <string name="great_offer_lunch">Great Offer on Lunch Buffet</string>
    <string name="buffet">Buffets</string>
    <string name="bbq">BBQ</string>
    <string name="pizza">Pizza</string>
    <string name="drinks">Drinks</string>
    <string name="biryani">Biryani</string>
    <string name="new_">New</string>
    <string name="budget">Budget</string>
    <string name="all">All</string>
    <string name="view_map">View Map</string>
    <string name="event">Event</string>
    <string name="live">Live</string>
    <string name="open_now">Open Now</string>
    <string name="view_all_outlets">View All Outlets</string>
    <string name="book_a_dinning">Book a Dinning</string>
    <string name="menu">Menu</string>
    <string name="photos">Photos</string>
    <string name="offer">Offer</string>
    <string name="review">Review</string>
    <string name="about_address">About &amp; Address</string>
    <string name="leave_review">Leave a Review</string>
    <string name="call">Call</string>
    <string name="schedule">Schedule</string>
    <string name="book_table">Book a Table</string>
    <string name="address">Address</string>
    <string name="all_day_dinning">All day dinning</string>
    <string name="facilities">Facilities &amp; Features</string>
    <string name="rate_review">Rate &amp; Review</string>
    <string name="about_res">About Restaurant</string>
    <string name="recommended_dish">Recommended Dish</string>
    <string name="more">8\nMore</string>
    <string name="sample">Baked goods are cooked by baking, a method of cooking food that uses prolonged dry heat.</string>
    <string name="sample_max">Baked goods are cooked by baking, a method of cooking food that uses prolonged dry heat.Baked goods are cooked by baking, a method of cooking food that uses prolonged dry heat.</string>
    <string name="fri">Fri\n21 JUN</string>
    <string name="what_day">What day?</string>
    <string name="after_noon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="select_day_time">Select Day &amp; Time</string>
    <string name="select_offer">Select Offer</string>
    <string name="bookings">(Bookings)</string>
    <string name="offer_reservation">Offer with Reservation</string>
    <string name="reserve_table_get_dis">Reserve a table and get special discounts</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="offer_selected">Offer Selected</string>
    <string name="select_guest">Select No. of Guest</string>
    <string name="guest_detail">Guest Details</string>
    <string name="your_phone_number">Your Phone Number will be verified before Confirming the booking</string>
    <string name="email_address">Email Address</string>
    <string name="special_request">Special Request(if need)</string>
    <string name="enter_name_phone">Enter Name &amp; Phone</string>
    <string name="booking_received">Booking Received</string>
    <string name="booking_details">Booking Details</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="confirmed">Confirmed</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="no_of_guest">No. of Guests</string>
    <string name="selected_offer">Selected Offer</string>
    <string name="get_direction">Get Direction</string>
    <string name="view_restaurant_details">View Restaurant Details</string>
    <string name="share_booking">Share this Booking</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="have_ques">Have Question</string>
    <string name="cancellation_reason">Cancellation Reason</string>
    <string name="outlet_location">Outlet Location</string>
    <string name="you_will_get_confirmation">You will get confirmation notification from Restaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="eat_dinning">Eat-Out or Dinning Out</string>
    <string name="search_for_res">Search for restaurant, cuisine or dish..</string>
    <string name="type_city">Type a city or neighborhood...</string>
    <string name="location">Location</string>
    <string name="Popular_location">Popular Location in Bangalore</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="order_history">Order History</string>
    <string name="table_booking">Table Booking</string>
    <string name="nav_header_title">Username</string>
    <string name="delivery_boy">Delivery Boy</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="your_order_deliver">Your Order will be Delivered by 11.30AM</string>
    <string name="items">Your Order</string>
    <string name="item_list">Item List</string>
    <string name="instruction">Add Cooking Instructions</string>
    <string name="add">Add</string>
    <string name="add_contact_person">Add a Contact Person</string>
    <string name="add_item">Add Item</string>
    <string name="order_live">Order Live Location</string>
    <string name="order_summary">Order Summary</string>
    <string name="track_your_order">Track Your Order</string>
    <string name="cod">Cash On Delivery</string>
    <string name="order_no">Order No.</string>
    <string name="order_details">Order Details</string>
    <string name="discount">Discount (GoodFoodApp5%)</string>
    <string name="free">Free</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="gst_cst">GST &amp; CST</string>
    <string name="sub_total">Sub Total</string>
    <string name="charges">Charges</string>
    <string name="view_breakdown">View Breakdown</string>
    <string name="grand_total">Grand Total:</string>
    <string name="your_order">Your Order</string>
    <string name="order_id">Order Id</string>
    <string name="total_amount">Total Amount</string>
    <string name="ordered_on">Ordered On</string>
    <string name="delivery_charge">+ Delivery Charge</string>
    <string name="schedule_later">Schedule for Later</string>
    <string name="schedule_date_time">Schedule Day and Time</string>
    <string name="confirm">Confirm</string>
    <string name="place_order">Place the Order</string>
    <string name="save_payment_methods">Save Payment Methods</string>
    <string name="about">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="refund">Refund Policy</string>
    <string name="signout">SignOut</string>
    <string name="view_order_summary">View Order Summary</string>
    <string name="delete_list">Delete List</string>
    <string name="are_you_sure_delete">Are you sure want to\ndelete your list?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="terms">Terms and conditions</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="my_wallet">My wallet</string>
</resources>