<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider_bg"
    android:orientation="vertical"
    tools:context=".Food.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/vI_af_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/back_arrow"
            android:contentDescription="@string/app_name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_2"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="110dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/vT_af_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mobile"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/vE_af_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/enter_registered"
                android:inputType="number"
                android:paddingStart="5dp"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_16"
                android:theme="@style/EditTextTheme" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vT_af_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="@dimen/text_16"
                android:text="@string/otp" />

            <EditText
                android:id="@+id/vE_af_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/vT_af_otp"
                android:hint="@string/otp_auto"
                android:inputType="number"
                android:gravity="center"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_16"
                android:theme="@style/EditTextTheme" />

        </RelativeLayout>
        <TextView
            android:id="@+id/vT_af_otphas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_sent"
            android:gravity="center"
            android:textColor="@color/text_color_light"
            android:textSize="@dimen/text_14" />

        <TextView
            android:id="@+id/vT_af_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/resend_code"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_14" />
        <TextView
            android:id="@+id/vT_af_verify"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/circle_green_corner_bend"
            android:gravity="center"
            android:paddingEnd="50dp"
            android:layout_marginTop="20dp"
            android:paddingStart="50dp"
            android:layout_gravity="center"
            android:text="@string/verify_now"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16" />

    </LinearLayout>

</RelativeLayout>
