<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/VL_psd_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/vT_psd_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_18"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="@color/text_color"
            android:text="@string/delete_list"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_l"/>


    <TextView
        android:id="@+id/vT_psd_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_16"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:textColor="@color/text_color"
        android:text="@string/are_you_sure_delete"/>
    <TextView
        android:id="@+id/vT_psd_yes"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_14"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:background="@drawable/button_green"
        android:text="@string/yes"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/vT_psd_cancel"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:textSize="@dimen/text_14"
        android:textColor="@color/text_color"
        android:text="@string/cancel"/>

</LinearLayout>